--- a/front/src/app/pages/archivo/archivo.component.html
+++ b/front/src/app/pages/archivo/archivo.component.html
@@ -1,15 +1,26 @@
-<form novalidate class="mt-3" (ngSudmit)="onSave()" [formGroup]="processFileForm">  
-    <div class="form-row">
-        <div class="form-group" >
-            <input type="text" class="form-control" placeholder="email" formControlName="email">
-        </div>
-        <div class="form-group col-md-6">
-            <label>Archivo a procesar</label>
-            <input type="file" class="form-control" placeholder="archivo" formControlName="archivo">
+<form novalidate class="mt-3" (ngSubmit)="onSave()" [formGroup]="processFileForm">  
+    
+    <div class="form-group" >
+        <label>Email</label>
+        <input type="text" class="form-control" placeholder="email" formControlName="email" [class]="isValidFiel('email')">
+        <div class="invalid-feedback">
+            
+            <span *ngIf="processFileForm.get('email')?.errors?.email">
+                Por favor ingrese un correo valido
+            </span>
         </div>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-4">
-        <button type="submit" (click)="onSave()" class="btn btn-primary btn-block">Procesar</button>
+    <div class="form-group">
+        <label>Archivo a procesar</label>
+        <input type="file" class="form-control" placeholder="archivo" formControlName="archivo" [class]="isValidFiel('archivo')">
     </div>
+
+    <p></p>
+
+    
+        <button type="submit" class="form-control btn btn-block btn-primary">Procesar</button>
+    
+
+
 
 </form>
