--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<p>Bienvenidos</p>
+<p>En el siguiente archivo se encuentra publicado el diseño de arquitectura y las instrucciones de uso</p>
+<a href="https://drive.google.com/file/d/1AbAU1Jon21ccse6jhBDqxwFKjQB2DowR/view?usp=sharing">DiseñoArquitecturaSolucion_CifradoCedula</a>
+<p></p>
+<p>En el siguiente repositorio se encuentra publicado los fuentes del front y del back</p>
+<a href="https://github.com/carloshd25/ACC">github.com/carloshd25/ACC</a>
+<p></p>
+
+<p>Realizado por: Carlos Rrrego</p>
+<p>Contacto:</p>
+<p>Email:caorrego91@gmail.com</p>
+<p>Celular:3508411011</p>
